# multihead

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  detector_rois.yaml  noxfile.py  pixi.toml  pyproject.toml
.github/: CONTRIBUTING.md  copilot-instructions.md
.github/workflows/: cd.yml  ci.yml
demos/: corrections_scales.py  khymographs.py  kymographs.py  mask.py  rechunk.py  scrubber.py  to_sparse.py
docs/: conf.py  index.md
src/hrd_test/: __init__.py  mda.py
src/multihead/: __init__.py  align.py  cli.py  config.py  corrections.py  file_io.py  mda.py  raw_proc.py  reports.py  text_file_io.py
src/multihead/tiled/: README.md  __init__.py  example_register.py  register_hrd_data.py  tiled.py
tests/: test_package.py  test_raw_proc.py
tiled/: config.yml
